Add members to SSHKey Class

--- a/src/Other Resources Encoder/Other Resources Encoder/Other Resources Encoder.csproj
+++ b/src/Other Resources Encoder/Other Resources Encoder/Other Resources Encoder.csproj
@@ -52,7 +52,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SSHKeygen.cs" />
+    <Compile Include="FolderPath.cs" />
+    <Compile Include="SSHKey.cs" />
     <Compile Include="Form\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
