--- a/src/Other Resources Encoder/Other Resources Encoder/packages.config
+++ b/src/Other Resources Encoder/Other Resources Encoder/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibVLCSharp" version="3.3.1" targetFramework="net472" />
+  <package id="LibVLCSharp.WinForms" version="3.3.1" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="SshKeyGenerator" version="1.1.31" targetFramework="net472" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.8.1" targetFramework="net472" />
 </packages>
