--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@ PublishScripts/
 *.snupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
+!**/[Pp]ackages/SSH.NET.darinkes.openssh_format_rsa/
 # except build/, which is used as an MSBuild target.
 !**/[Pp]ackages/build/
 # Uncomment if necessary however generally it will be regenerated when needed
