--- a/src/Other Resources Encoder/Other Resources Encoder/Other Resources Encoder.csproj
+++ b/src/Other Resources Encoder/Other Resources Encoder/Other Resources Encoder.csproj
@@ -61,7 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FolderPath.cs" />
+    <Compile Include="Config\SSHConfig.cs" />
+    <Compile Include="Path.cs" />
     <Compile Include="SSHKey.cs" />
     <Compile Include="Form\AboutForm.cs">
       <SubType>Form</SubType>
@@ -89,7 +90,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SSH\ssh.cs" />
+    <Compile Include="SSH\SSH.cs" />
     <EmbeddedResource Include="Form\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
